@@ -1,6 +1,7 @@
 ﻿ ===== 3.1.28-dev===== (xx.xx.2015)
  06.08.2015
   - avoid possible circular object referances caused by parser/lexer objects
+  - rewrite compileAll... utility methods
 
  03.08.2015
   - rework clear cache methods
